2008-06-11  Michael Stucki  <michael@typo3.org>

	* (security) Fixed a low-severity Cross Site Scripting issue in fe_adminLib.inc. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20080611-1/ - thanks to Christian Seifert, Jeroen van Iddekinge and Arnd Messer for discovering and reporting this issue.

2008-06-11  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed #8674: Vulnerability of security bulletin typo3-20080611-1: Default value of fileDenyPattern allows arbitrary code execution on Apache (Patch by Henning Pingel, thanks!)

2008-06-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8264: t3ditor - "+" (plus) signs are replaced by spaces (Thanks to Tobias Liebig)
	* Fixed bug #8591: AJAX encoding is UTF-8, thus has problems with backend charsets (Thanks to Tobias Liebig)

2008-06-10  Jeff Segars  <jeff@webempoweredchurch.org>

	* Followup to bugfix #8108: Extension configuration options are not always shown (Thanks to Steffen Kamper)

2008-06-10  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8643: Inline CSH is not styled with t3skin (Thanks to Steffen Kamper)
	* Fixed bug #8483: Lines break when longer as the width of the window (Thanks to Tobias Liebig)
	* Fixed bug #8478: highlighting error (the next line after a ">" gets colored as "value") (Thanks to Tobias Liebig)
	* Fixed bug #2905: Followup - t3skin - Styling of tab menus is bad when hovering (Thanks to Ben van't Ende)

2008-06-10  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8635: Side-effect of the fix for bug #7897: MM-relations, flexform and others got lost during copying/localizing

2008-06-10  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #8422: Context Sensitive Help mode with "display full text messages"

2008-06-09  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8509: Some labels in Module About are hardcoded, credits Christopher Stelmaszyk

2008-06-09  Ernesto Baschny  <ernst@cron-it.de>
